@@ -1222,22 +1222,23 @@ bool CommandLine::FindStringBegin(char const* const begin,std::string & value, b
     return false;
 }
 
-bool CommandLine::FindStringFullBegin(char const* const begin,std::string & value, bool remove) {
+bool CommandLine::FindStringFullBegin(char const* const begin,std::string & value, bool squote, bool remove) {
     size_t len = strlen(begin);
+    char c = squote?'\'':'\"';
     for (cmd_it it=cmds.begin();it!=cmds.end();++it) {
         if (strncmp(begin,(*it).c_str(),len)==0) {
-            bool q=(*it)[len]=='"';
+            bool q=(*it)[len]==c;
             value=((*it).c_str() + len + (q?1:0));
             if (remove) cmds.erase(it);
             if (q) {
                 std::string str=value;
-                if (str.back()=='"')
+                if (str.back()==c)
                     value.pop_back();
                 else while (str.size()&&++it!=cmds.end()) {
                     str=(*it);
                     if (remove) cmds.erase(it);
                     value+=" "+str;
-                    if (str.back()=='"') {
+                    if (str.back()==c) {
                         value.pop_back();
                         break;
                     }
@@ -1537,7 +1538,7 @@ uint16_t CommandLine::Get_arglength() {
 }
 
 
-CommandLine::CommandLine(char const * const name,char const * const cmdline,enum opt_style opt) {
+CommandLine::CommandLine(char const * const name,char const * const cmdline,enum opt_style opt, bool squote) {
     if (name) file_name=name;
     /* Parse the cmds and put them in the list */
     bool inword,inquote;char c;
@@ -1548,7 +1549,7 @@ CommandLine::CommandLine(char const * const name,char const * const cmdline,enum
     opt_style = opt;
     while ((c=*c_cmdline)!=0) {
         if (inquote) {
-            if (c!='"') str+=c;
+            if (c!='"'&&!squote) str+=c;
             else {
                 inquote=false;
                 cmds.push_back(str);
@@ -1562,7 +1563,7 @@ CommandLine::CommandLine(char const * const name,char const * const cmdline,enum
                 str.erase();
             }
         }
-        else if (c=='\"') { inquote=true;}
+        else if (c=='\"'&&!squote) { inquote=true;}
         else if (c!=' ') { str+=c;inword=true;}
         c_cmdline++;
     }
